Trying a 3d rotate rather than just y

--- a/tacc.html
+++ b/tacc.html
@@ -22,7 +22,7 @@ $(document).ready( function() {
 
 		$(this).transition({
 		    perspective: '100px',
-		    rotateY: '180deg'
+		    rotate3d: '1, 1, 0, 180deg'
 		});
 
 		$(this).find('.blank_side').html($(this).attr('id'));
